--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@
 
 torch==1.4.0
 transformers==2.11.0
+# Just for convert
+# tensorflow==1.14.0
 # tensorflow-gpu==1.14.0 is aslo ok
-tensorflow==1.14.0
