--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 
 
 torch==1.4.0
-transformers==2.11.0
+# transformers==2.11.0
+transformers==3.1.0
 # Just for convert
 # tensorflow==1.14.0
 # tensorflow-gpu==1.14.0 is aslo ok
